cmake_minimum_required(VERSION 3.10)

add_definitions(/W4)
PROJECT(MRemesher)

SET(BINARIES_RELATIVE_PATH /binaries/)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}${BINARIES_RELATIVE_PATH})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}${BINARIES_RELATIVE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/LocalRemesher/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/MeshTools/include)

ADD_SUBDIRECTORY(src/MeshTools)
ADD_SUBDIRECTORY(src/LocalRemesher) 
