AUX_SOURCE_DIRECTORY(. SUB_SOURCES)
SET(SOURCES ${SOURCES} ${SUB_SOURCES})
file(GLOB_RECURSE HeaderFiles *.h *.hpp)

find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)
INCLUDE_DIRECTORIES( ${OPENGL_INCLUDE_DIR}  ${GLUT_INCLUDE_DIR} )
INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(./include)
SOURCE_GROUP("Include Files" FILES ${HeaderFiles}) 
ADD_EXECUTABLE(LocalRemesher ${SOURCES} ${HeaderFiles})

ADD_DEPENDENCIES(LocalRemesher MeshTools)
TARGET_LINK_LIBRARIES(LocalRemesher MeshTools ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})
